--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
     "require": {
         "php": "^8.2",
         "awcodes/filament-table-repeater": "^3.1",
+        "barryvdh/laravel-dompdf": "^3.1",
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "leandrocfe/filament-apex-charts": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
