--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "awcodes/filament-table-repeater": "^3.1",
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.2",
+        "filament/forms": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
