--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "filament/filament": "^3.2",
         "filament/forms": "^3.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "leandrocfe/filament-apex-charts": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
