--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.17",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@fontsource/inter": "^5.1.1",
+        "boxicons": "^2.1.4"
     }
 }
